加速床の追加

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,8 +64,10 @@
     <Compile Include="Assets\Script\AnimationController.cs" />
     <Compile Include="Assets\Script\GoalItemScript.cs" />
     <Compile Include="Assets\Script\ItemScript.cs" />
+    <Compile Include="Assets\Script\AccelScript.cs" />
     <Compile Include="Assets\Script\FadeSceneLoader.cs" />
     <Compile Include="Assets\Script\PullingJump.cs" />
+    <Compile Include="Assets\Script\CannonScript.cs" />
     <Compile Include="Assets\Script\CameraMove.cs" />
     <Compile Include="Assets\Script\ArrowDraw.cs" />
   </ItemGroup>
